# packbuddy

./: README.md  package.json
cdk/: package-lock.json  package.json
cdk/lib/: dynamodb-stack.ts  packing-list-stack.ts
services/get-packing-list-by-id/: Cargo.toml
services/get-packing-list-by-id/src/: main.rs
services/packing-list/: Cargo.toml
services/packing-list/get-packing-list/: Cargo.toml
services/packing-list/get-packing-list/src/: main.rs
services/packing-list/model/: Cargo.toml
services/packing-list/model/src/: lib.rs
services/packing-list/put-packing-list/: Cargo.toml
services/packing-list/put-packing-list/src/: main.rs
services/packing-list/utils/: Cargo.toml
services/packing-list/utils/src/: lib.rs
