[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
tracing = { version = "0.1", features = ["log"] }
aws-sdk-dynamodb = "0.23.0"
serde = "1.0.152"
