[package]
name = "put-packing-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0"
aws-sdk-dynamodb = "0.23.0"
aws-config = "0.53.0"
serde = "1.0.152"
log = "0.4.17"
model = { path = "../model" }
utils = { path = "../utils" }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",           # Use a faster (but still sufficiently random) RNG
]

